# accounting-assistant

./: .gitignore  Dockerfile  main.py  pyproject.toml
app/prompts/: get_invoice_prompt.txt
app/routers/: document.py
app/schemas/: ai_response.py
app/services/: ai_analyzer.py  document_analyzer.py  prompt_library.py  signed_url.py
